Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2012-01-17 04:11:41 Europe/Berlin
	Arghl... another requirement fix

0.002     2012-01-17 04:10:01 Europe/Berlin
	Fixed requirements

0.001     2012-01-17 03:48:32 Europe/Berlin
	First working version