@@ -15,6 +15,8 @@ File::Spec::Functions = 3.33
 Dist::Data = 0.002
 utf8::all = 0
 DateTime = 0.72
+DateTime::Format::RFC3339 = 0
+DateTime::Format::Epoch = 0.13
 
 [Prereqs / TestRequires]
 Test::More = 0.90
