@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	Fixed documentation, added generation of 02STAMP
 
 0.003     2012-01-17 04:11:41 Europe/Berlin
 	Arghl... another requirement fix
